Fixing component path

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -3,8 +3,8 @@
    ========================================================================== */ 
 
 @import "compass";
-@import '../../../../bower_components/normalize-scss/normalize';
-@import '../../../../bower_components/jeet/scss/jeet/index';
+@import '../../components/normalize-scss/normalize';
+@import '../../components/jeet/scss/jeet/index';
 @import "settings";
 @import "forms";
 
