--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -5,11 +5,11 @@
 
 form {
   display: block;
-  margin: 0 0 $spacing-fixed 0;
+  @include rem(margin, 0 0 $spacing-fixed 0);
 }
 fieldset {
   border: 0;
-  margin: 0 -7.5px;
+  @include rem(margin, 0 -7.5px);
   padding: 0;
 }
 input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
@@ -17,24 +17,24 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
   border: 1px solid $offsetcolor_verystrong;
   color: $textcolor;
   @include primaryfont();
-  @include font-size(1.6);
-  @include line-height(2.3);
+  @include rem(font-size, 16px);
+  @include rem(line-height, 23px);
   height: auto;
   margin: 0;
-  padding: 6px;
+  @include rem(padding, 6px);
   outline: none;
   @include border-radius(0);
   @include box-shadow(none);
 }
 select {
   border: 1px solid $offsetcolor_verystrong;
-  @include font-size(1.4);
-  @include line-height(2.1);
-  height: 34px;
+  @include rem(font-size, 14px);
+  @include rem(line-height, 21px);
+  @include rem(height, 34px);
   -webkit-appearance: menulist-button;
 }
 select[multiple] {
-    height: auto;
+  height: auto;
 }
 input.text:focus,
 textarea:focus {
@@ -67,19 +67,19 @@ input.text { width: 100%; }
   width: 100%;
 }
 .field {
-   margin: 0 -2px 20px -2px;
-   padding: 0 7.5px;
-   display: inline-block; zoom:1; *display: inline;
-   vertical-align: bottom;
-   font-size: 0;
-   @include bp(md) {
-      margin-right: 0;
-   }
+  @include rem(margin, 0 -2px $spacing-fixed-sm -2px);
+  @include rem(padding, 0 7.5px);
+  display: inline-block;
+  vertical-align: bottom;
+  font-size: 0;
+  @include bp(md) {
+    margin-right: 0;
+  }
 }
 .field.checkbox {
   input.checkbox {
     float: left;
-    margin: 6px 6px 0 0;
+    @include rem(margin, 6px 6px 0 0);
   }
   label.right {
     float: left;
@@ -89,22 +89,22 @@ input.text { width: 100%; }
   display: block;
   width: 100%;
   input.mathspamprotector {
-    width: 100px;
+    @include rem(width, 100px);
   }
 }
 form label.left {
   color: $textcolor_strong;
   @include primaryfont();
-  @include font-size(1.8);
-  @include line-height(2.5);
+  @include rem(font-size, 18px);
+  @include rem(line-height, 25px);
   font-weight: 700;
-  margin: 0 !important; 
-  padding: 0 0 10px 0 !important;
+  margin: 0; 
+  @include rem(padding, 0 0 $spacing-fixed-xs 0);
   clear: both;
 }
 form label.left small {
-  @include font-size(1.4);
-  @include line-height(2.1);
+  @include rem(font-size, 14px);
+  @include rem(line-height, 21px);
   font-weight: 400;
 }
 .middleColumn { 
@@ -117,40 +117,39 @@ form label.left small {
   padding: 0;
 }
 form ul, form ol {
-  @include font-size(1.6);
-  @include line-height(2.2);
+  @include rem(font-size, 16px);
+  @include rem(line-height, 22px);
   margin: 0;
-  padding: 0 0 20px 30px;
-  li { margin-bottom: 5px; }
+  @include rem(padding, 0 0 $spacing-fixed-sm $spacing-fixed);
+  li { @include rem(margin-bottom, 5px); }
   li:last-child { margin-bottom: 0; }
 }
 form ul.optionset, form ul.checkboxset {
-  padding: 0 10px 20px 10px;
+  @include rem(padding, 0 $spacing-fixed-xs $spacing-fixed-sm $spacing-fixed-xs);
   li {
     list-style: none;
   }
 }
-form li.even { background: none !important; }
+form li.even { background: none; }
 .optionset input, .checkboxsetfield input { 
   border: 0;
   display: block;
   float: left;  
-  margin: 4px 10px 0 0;
+  @include rem(margin, 4px $spacing-fixed-xs 0 0);
   padding: 0;
 }
 div.tab .field .middleColumn { clear: none !important; margin: 0 !important; width: auto; }
 select { 
-  max-width: 540px;
+  @include rem(max-width, 540px);
   width: auto;
 }
 input:focus span,
 textarea:focus span { border: 3px solid #000; }
 input.action:hover,
 input.action:focus { cursor: pointer; }
-input#Search_Form_SearchForm_Search { width: 110px; padding: 3px 3px 3px 3px; margin-left: -4px; }
 label.right {
-  padding: 0 0 5px 0 !important;
-  margin: 0 !important;
+  @include rem(padding, 0 0 5px 0);
+  margin: 0;
   text-align: left;
 }
 .required label.left:after, .requiredField label.left:after, .mathspamprotector label.left:after {
@@ -164,45 +163,43 @@ label.right {
 #Form_Form span.required {
   background: $alertcolor_dark;
   color: #fff;
-  padding: 10px 15px;
+  @include rem(padding, $spacing-fixed-xs $spacing-fixed-sm);
   width: 100%;
   font-weight: 700;
-  @include font-size(1.6);
-  @include line-height(2.2);
+  @include rem(font-size, 16px);
+  @include rem(line-height, 22px);
   display: block;
   position: relative;
   text-align: center;
-  top: -2px;
+  @include rem(top, -2px);
 }
 #Form_Form span.required:before {
   display: block;
   content: "";
-  @include absolutecenter(x);
-  top: -7px;
-  margin-left: -7px;
-  border-right: 7px solid transparent;
-  border-left: 7px solid transparent;
-  border-bottom: 7px solid $alertcolor_dark;
+  @include ctr(x);
+  @include rem(top, -7px);
+  @include rem(margin-left, -7px);
+  @include triangle(up, 7px, $alertcolor);
 }
 #Form_Form span.message.error {
-  margin-top: 10px;
+  @include rem(margin-top, 10px);
   color: $alertcolor_dark;
   font-weight: 700;
-  @include font-size(1.6);
-  @include line-height(2.2);
+  @include rem(font-size, 16px);
+  @include rem(line-height, 22px);
   display: block;
 }
 .success {
   color: #fff;
-  @include font-size(1.8);
-  @include line-height(2.3);
+  @include rem(font-size, 18px);
+  @include rem(line-height, 23px);
   font-weight: 700;
   text-align: center;
-  padding: 20px;
+  @include rem(padding, $spacing-fixed-sm);
   background: $successcolor_dark;
   border: 3px solid $successcolor_meddark;
   display: block;
-  margin: 0 0 20px 0;
+  @include rem(margin, 0 0 $spacing-fixed-sm 0);
 }
 
 
@@ -211,17 +208,17 @@ label.right {
    ========================================================================== */
 
 form h2, .FormHeading {
-  @include font-size(2.2);
-  @include line-height(2.9);
+  @include rem(font-size, 22px);
+  @include rem(line-height, 29px);
   border-bottom: 1px solid $offsetcolor;
   border-top: 1px solid $offsetcolor;
   clear: both;
-  margin: 10px 0 20px; 
-  padding: 10px 0 !important;
+  @include rem(margin, $spacing-fixed-xs 0 $spacing-fixed-sm); 
+  @include rem(padding, $spacing-fixed-xs 0);
   width: 100%;
 }
 .login-logo {
-  margin: 0 auto 10px auto;
+  @include rem(margin, 0 auto $spacing-fixed-xs auto);
 }
 .form-text { color: $textcolor; }
 
@@ -236,7 +233,7 @@ form h2, .FormHeading {
 #ForgotPassword {
   color: $textcolor_subtle;
   float: left;
-  padding: 4px 0 0 10px;
+  @include rem(padding, 4px 0 0 $spacing-fixed-xs);
 }
 #ForgotPassword:before {
   content: "or ";
