--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -65,30 +65,53 @@ $successcolor_verylight: lighten($successcolor, 55%);
 /* Functionality / Structure */
 
 $transitionduration: .4s;
+$borderradius: 0.1875rem;
 $spacing: 5%;
+$spacing-xs: $spacing * .5;
 $spacing-sm: $spacing * .75;
 $spacing-lg: $spacing * 2;
+$spacing-xl: $spacing * 3;
 $spacing-fixed: 30px;
-$spacing-fixed-sm: $spacing-fixed * .7;
 $spacing-fixed-xs: $spacing-fixed * .4;
+$spacing-fixed-sm: $spacing-fixed * .7;
 $spacing-fixed-lg: $spacing-fixed * 1.5;
+$spacing-fixed-xl: $spacing-fixed * 2.0;
 $maxwidth: 1200px;
-$maxwidth-lg: $maxwidth * 1.2;
-$maxwidth-sm: $maxwidth * .8;
 $maxwidth-xs: $maxwidth * .4;
+$maxwidth-sm: $maxwidth * .8;
+$maxwidth-lg: $maxwidth * 1.2;
+$maxwidth-xl: $maxwidth * 1.4;
 
 
 /* ==========================================================================
    Mixins
    ========================================================================== */ 
 
-@mixin font-size($sizeValue: 1.6) {
-  font-size: ($sizeValue * 10) + px;
-  font-size: $sizeValue + rem;
-}
-@mixin line-height($sizeValue: 1.6) {
-  line-height: ($sizeValue * 10) + px;
-  line-height: $sizeValue + rem;
+@mixin rem($property, $values) {
+  $font-size: $base-font-size;
+  $px-values: ();
+  $rem-values: ();
+  @each $value in $values {
+    @if $value == 0 or $value == 0px {
+      $px-values: join($px-values, 0);
+      $rem-values: join($rem-values, 0);
+    } @else if type-of($value) == number and not unitless($value) and (unit($value) == px) {
+      $new-rem-value: $value / $font-size;
+      $px-values: join($px-values, round($value));
+      $rem-values: join($rem-values, #{$new-rem-value}rem);
+    } @else if type-of($value) == number and not unitless($value) and (unit($value) == "%") {
+      $px-values: join($px-values, #{$value});
+      $rem-values: join($rem-values, #{$value});
+    } @else if $value == auto {
+      $px-values: join($px-values, auto);
+      $rem-values: join($rem-values, auto);
+    } @else {
+      $px-values: join($px-values, round($value * $font-size));
+      $rem-values: join($rem-values, #{$value}rem);
+    }
+  }
+  #{$property}: $px-values;
+  #{$property}: $rem-values;
 }
 @mixin rgba($type, $color, $percentage) {
   @if $type == color {
@@ -135,7 +158,7 @@ $maxwidth-xs: $maxwidth * .4;
 @mixin unctr($args...) {
   @include unabsolutecenter($args...);
 }
-@mixin triangle($direction, $size: 6px, $color: #222){
+@mixin triangle($direction, $size: 0.375rem, $color: #222){
   content: '';
   display: block;
   position: absolute;
@@ -178,7 +201,7 @@ $maxwidth-xs: $maxwidth * .4;
   background: $bgcolor;
   border: none;
   cursor: pointer;
-  display: block;
+  display: inline-block;
   height: auto;
   margin: 0;
   overflow: hidden;
@@ -186,10 +209,10 @@ $maxwidth-xs: $maxwidth * .4;
   text-align: center;
   text-transform: uppercase;
   @include secondaryfont();
-  @include font-size($fontsize);
-  @include line-height($fontsize);
+  @include rem(font-size, $fontsize);
+  @include rem(line-height, $fontsize);
   color: $fontcolor;
-  padding: $padding;
+  @include rem(padding, $padding);
   @include transition-duration($transitionduration);
   &:hover {
     background: lighten($bgcolor, 6%);
@@ -197,7 +220,7 @@ $maxwidth-xs: $maxwidth * .4;
     text-decoration: none;
   }
   &:active {
-    @include box-shadow(inset 0 0 6px rgba(0,0,0,.5));
+    @include box-shadow(inset 0 0 0.375rem rgba(0,0,0,.5));
     outline: none;
   }
   &:visited {
@@ -210,7 +233,7 @@ $maxwidth-xs: $maxwidth * .4;
 }
 @mixin ghostbutton($fontsize, $bordercolor, $spacing) {
   border: 1px solid $bordercolor;
-  @include border-radius(3px);
+  @include border-radius($borderradius);
   cursor: pointer;
   display: inline-block;
   height: auto;
@@ -219,10 +242,10 @@ $maxwidth-xs: $maxwidth * .4;
   text-decoration: none;
   text-align: center;
   @include secondaryfont();
-  @include font-size($fontsize);
-  @include line-height($fontsize);
+  @include rem(font-size, $fontsize);
+  @include rem(line-height, $fontsize);
   color: $bordercolor;
-  padding: $spacing;
+  @include rem(padding, $spacing);
   @include transition-duration($transitionduration);
   &:hover {
     background: $bordercolor;
@@ -230,7 +253,7 @@ $maxwidth-xs: $maxwidth * .4;
     text-decoration: none;
   }
   &:active {
-    @include box-shadow(inset 0 0 6px rgba(0,0,0,.5));
+    @include box-shadow(inset 0 0 0.375rem rgba(0,0,0,.5));
     outline: none;
   }
   &:visited {
@@ -250,19 +273,19 @@ $maxwidth-xs: $maxwidth * .4;
 /* Breakpoints */
 
 @mixin bp($point) {
-  @if $point == xl {
-    @media (max-width: 1050px) { @content; }
+  @if $point == xl { // 1050px
+    @media (max-width: 65.625rem) { @content; }
   }
-  @else if $point == lg {
-    @media (max-width: 900px) { @content; }
+  @else if $point == lg { // 900px
+    @media (max-width: 56.25rem) { @content; }
   }
-  @else if $point == md {
-    @media (max-width: 768px)  { @content; }
+  @else if $point == md { // 768px
+    @media (max-width: 48rem)  { @content; }
   }
-  @else if $point == sm {
-    @media (max-width: 600px)  { @content; }
+  @else if $point == sm { // 600px
+    @media (max-width: 37.5rem)  { @content; }
   }
-  @else if $point == xs {
-    @media (max-width: 400px)  { @content; }
+  @else if $point == xs { // 400px
+    @media (max-width: 25rem)  { @content; }
   }
 }
