--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -9,7 +9,13 @@ form {
 }
 fieldset {
   border: 0;
-  @include rem(margin, 0 -7.5px);
+  @include rem(margin, 0 -6px);
+  padding: 0;
+}
+fieldset.form-step {
+  margin: 0;  
+}
+.step-navigation .step-buttons {
   padding: 0;
 }
 input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
@@ -177,9 +183,9 @@ label.right {
   display: block;
   content: "";
   @include ctr(x);
-  @include rem(top, -7px);
-  @include rem(margin-left, -7px);
-  @include triangle(up, 7px, $alertcolor);
+  @include rem(top, -9px);
+  @include rem(margin-left, -9px);
+  @include triangle(up, 9px, $alertcolor_dark);
 }
 #Form_Form span.message.error {
   @include rem(margin-top, 10px);
