Hiding remember field in login

--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -233,7 +233,7 @@ form h2, .FormHeading {
    Login Form
    ========================================================================== */
 
-#Remember {
+#Remember, #MemberLoginForm_LoginForm_Remember_Holder {
   display: none;
 }
 #ForgotPassword {
